selfhost/test/parser/import_error_list_no_comma.out
Error at %FILE_NAME%:1:10
Unexpected token 'identifier', expected one of ',', 'from':
  |  import a b from "./abc"
              ^