selfhost/test/parser/import_error_list_no_comma.abra
import a b from "./abc"